resource files/kubernetes-manifest files/simple-setups/02 deployment-service-ingress/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-app-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: my-app  # This label must match the selector in your Service
  template:
    metadata:
      labels:
        app: my-app  # This label must match the selector in your Service
    spec:
      containers:
      - name: my-app-container
        image: nginx
        ports:
        - containerPort: 80  # This should match the targetPort in your Service
