resource files/kubernetes-manifest files/simple-setups/02 deployment-service-ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-app-ingress
spec:
  rules:
  - http:
      paths:
      - path: /myapp
        pathType: Prefix
        backend:
          service:
            name: my-app-service
            port:
              number: 80
